--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,7 +16,8 @@ spring:
         jdbc.batch_size: 20
   datasource:
     # ImMemory
-    url: jdbc:h2:mem:voting
+#    url: jdbc:h2:mem:voting
+    url: jdbc:h2:file:../../database
     #    tcp: jdbc:h2:tcp://localhost:9092/mem:voting
     username: sa
     password:
