--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.0.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ru.javaops</groupId>
+    <groupId>ru.felix</groupId>
     <artifactId>votingservice</artifactId>
     <version>1.0</version>
 
