1. Update controllers, a little refactoring 2. Update services, refactor logic. 3. Rewrote DishService

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,7 +43,7 @@ spring:
 logging:
   level:
     root: WARN
-    ru.felix.ru.felix.votingservice: DEBUG
+    ru.felix.votingservice: DEBUG
     org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver: DEBUG
 
 
